KL mobile mainnav spacing fix attempt v2
2nd try

--- a/style.css
+++ b/style.css
@@ -5655,7 +5655,7 @@ svg.full-logo {
 @media screen and (min-width:0\0) {
 	#hero-section #mobile-nav, #subpage-hero #mobile-nav {
 		position: absolute;
-		bottom: 8vh;
+		bottom: 8vh; !important;
 		left: 0;
 		padding: 0 20px;
 		width: 100%;
